--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                             <span class="navbar-toggler-icon">X</span>
                         </button>
                         <div class="navbar-collapse collapse navbar-expand-lg justify-content-around" id="navcollapse">
-                            <ul class="navbar-nav text-md-end py-5">
+                            <ul class="navbar-nav text-md-end py-5 pe-2">
                                 <li class="nav-item text-nowrap">
                                     <a class="px-lg-3 nav-link fw-bold" href="">Home</a>
                                 </li>
@@ -52,25 +52,28 @@
             </div>
         </nav>
 
-        <!-- header bottom -->
-        <div class="container-fluid text-white bg-success d-flex flex-column align-items-center float-end head-decor head-md-decor text-nowrap px-4 bg-opacity-50 d-lg-header">
-            <div class="row">
-                <div class="col-6 py-2">
-                    <div class="p-2 bd-highlight fw-bold">The Bride</div>
-                </div>
+        <!-- header bottom --->
+        <div class="container-fluid px-4 bg-opacity-50 align-items-right align-items-md-center 
+        text-nowrap text-white text-md-center
+        d-flex flex-column flex-lg-row justify-content-center
+        head-width head-md-width ahead-md-center mb-5">
+            <div class="col-12 col-lg-2 py-2">
+                <div class="p-2 bd-highlight fw-bold text-end text-md-center">The Bride</div>
             </div>
-            <div class="row">
-                <div class="col-6 py-2">
-                    <div class="p-2 bd-highlight fw-bold">The Groom</div>
-                </div>
+            <div class="col-12 col-lg-2 py-2">
+                <div class="p-2 bd-highlight fw-bold text-end text-md-center">The Couple</div>
+            </div>
+            <div class="col-12 col-lg-2 py-2">
+                <div class="p-2 bd-highlight fw-bold text-end text-md-center">The Groom</div>
             </div>
         </div>
-
-
-
     </header>
 
 
+
+
+
+    
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
