--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <div class="col-6 ">
                         <!-- logo here -->
                     </div>
-                    <div class="col-6 text-end text-white pt-3 pt-lg-4">
+                    <div class="col-6 text-end text-white pt-3 pt-lg-4 pe-4">
                         <button class="bg-info navbar-toggler btn btn-warning" type="button" data-bs-toggle="collapse"
                             data-bs-target="#navcollapse">
                             <span class="navbar-toggler-icon">X</span>
@@ -40,7 +40,7 @@
                                     <a class="px-lg-3 nav-link fw-bold" href="">Gallery</a>
                                 </li>
                                 <li class="nav-item text-nowrap">
-                                    <a class="px-lg-3 nav-link fw-bold" href="#">Contact Us</a>
+                                    <a class="px-lg-3 nav-link fw-bold" href="#">Timeline</a>
                                 </li>
                                 <li class="nav-item text-nowrap">
                                     <a class="px-lg-3 nav-link fw-bold" href="#">Contact Us</a>
@@ -68,12 +68,25 @@
             </div>
         </div>
     </header>
+    <div class="container p-5 text-center ">
+                <h1 class="p-3 mb-5">Please join us on our wedding celebration</h1>
+        <div class="container bg-success bg-opacity-25 text-start block-info" id="block1">
+          <div class="row">
+            <div class="col-6">
+             
+            </div>
+        <div class="col-6">
+                <p>hello</p>
+            </div>
+          </div>
+        </div>
+
+    </div>
 
 
 
 
 
-    
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
