--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="container-fluid px-4 bg-opacity-50 align-items-right align-items-md-center 
         text-nowrap text-white text-md-center
         d-flex flex-column flex-lg-row justify-content-center
-        head-width head-md-width ahead-md-center mb-5">
+        head-stickbot head-md-width ahead-md-center mb-5">
             <div class="col-12 col-lg-2 py-2">
                 <div class="p-2 bd-highlight fw-bold text-end text-md-center">The Bride</div>
             </div>
@@ -68,17 +68,22 @@
             </div>
         </div>
     </header>
-    <div class="container p-5 text-center ">
-                <h1 class="p-3 mb-5">Please join us on our wedding celebration</h1>
+    <div class="container-fluid container-md p-md-5  text-center">
+        <h1 class="p-3 mb-5">Lorem ipsum dolor sit amet</h1>
         <div class="container bg-success bg-opacity-25 text-start block-info" id="block1">
-          <div class="row">
-            <div class="col-6">
-             
+            <div class="row align-items-end align-items-md-center h-100">
+                <div class="col-6 mx-auto ">
+
+                </div>
+                <div class="col-12 col-md-6 p-3 p-md-0 text-center text-md-start mx-auto bg-light bg-opacity-75 d-flex justify-content-center justify-content-md-start">
+                    <div class="blk-content p-2 p-md-5 ">
+                        <p>Date</p>
+                        <p>Church</p>
+                        <p>Ceremony starts at ....</p>
+                        <button class="btn bg-oldrose">Location</button>
+                    </div>
+                </div>
             </div>
-        <div class="col-6">
-                <p>hello</p>
-            </div>
-          </div>
         </div>
 
     </div>
