--- a/index.html
+++ b/index.html
@@ -68,14 +68,60 @@
             </div>
         </div>
     </header>
-    <div class="container-fluid container-md p-md-5  text-center">
-        <h1 class="p-3 mb-5">Lorem ipsum dolor sit amet</h1>
-        <div class="container bg-success bg-opacity-25 text-start block-info" id="block1">
-            <div class="row align-items-end align-items-md-center h-100">
-                <div class="col-6 mx-auto ">
+    <h1 class="p-3 my-5 text-center">Lorem ipsum dolor sit amet</h1>
 
+    <div class="container-fluid container-md blocka-bg">
+        <div class="row">
+            <div class="col-0 col-md-4">
+            </div>
+            <div class="col-0 col-md-1">
+            </div>
+            <div class="col-12 col-md-7 p-2 p-md-5 rose1-50 my-5 text-white">
+                <div class="text-center text-md-start m-md-5">
+                    <p>Date</p>
+                    <p>Church</p>
+                    <p>Ceremony starts at ....</p>
+                    <button class="btn bg-white p-2">Location</button>
                 </div>
-                <div class="col-12 col-md-6 p-3 p-md-0 text-center text-md-start mx-auto bg-light bg-opacity-75 d-flex justify-content-center justify-content-md-start">
+            </div>
+        </div>
+    </div>
+
+   
+
+    <!-- block1 -->
+    <!-- <div class="container-fluid container-md">
+        <div class="container bg-success bg-opacity-10 text-start block-info p-md-5" id="block1">
+            <div class="row align-items-end align-items-md-center h-100">
+                <div class="col-6 mx-auto">
+                </div>
+                <div
+                    class="col-12 col-md-6 p-3 p-md-0 text-center text-md-start mx-auto bg-light bg-opacity-75 d-flex justify-content-center justify-content-md-start">
+                    <div class="blk-content p-2 p-md-5 ">
+                        <p>Date</p>
+                        <p>Church</p>
+                        <p>Ceremony starts at ....</p>
+                        <button class="btn oldrose">Location</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+<div class="container">
+    <p>hello</p>
+</div> -->
+
+
+    <!-- <div class="container ">
+    <div class="container container-md p-md-5 text-center">
+        <h1 class="p-3 mb-5">Lorem ipsum dolor sit amet</h1>
+        <div class="container bg-success bg-opacity-10 text-start block-info" id="block1">
+            <div class="row align-items-end align-items-md-center h-100">
+                <div class="col-6 mx-auto">
+                </div>
+                <div
+                    class="col-12 col-md-6 p-3 p-md-0 text-center text-md-start mx-auto bg-light bg-opacity-75 d-flex justify-content-center justify-content-md-start">
                     <div class="blk-content p-2 p-md-5 ">
                         <p>Date</p>
                         <p>Church</p>
@@ -85,12 +131,8 @@
                 </div>
             </div>
         </div>
-
     </div>
-
-
-
-
+</div> -->
 
 
 
