--- a/index.html
+++ b/index.html
@@ -70,12 +70,10 @@
     </header>
     <h1 class="p-3 my-5 text-center">Lorem ipsum dolor sit amet</h1>
 
-    <div class="container-fluid container-md blocka-bg">
-        <div class="row">
-            <div class="col-0 col-md-4">
-            </div>
-            <div class="col-0 col-md-1">
-            </div>
+    <div class="container-fluid container-md blocka-bg my-5">
+        <div class="row p-md-5">
+            <div class="col-0 col-md-4"></div>
+            <div class="col-0 col-md-1"></div>
             <div class="col-12 col-md-7 p-2 p-md-5 rose1-50 my-5 text-white">
                 <div class="text-center text-md-start m-md-5">
                     <p>Date</p>
@@ -87,8 +85,7 @@
         </div>
     </div>
 
-   
-
+    
     <!-- block1 -->
     <!-- <div class="container-fluid container-md">
         <div class="container bg-success bg-opacity-10 text-start block-info p-md-5" id="block1">
