--- a/index.html
+++ b/index.html
@@ -70,69 +70,56 @@
     </header>
     <h1 class="p-3 my-5 text-center">Lorem ipsum dolor sit amet</h1>
 
-    <div class="container-fluid container-md blocka-bg my-5">
-        <div class="row p-md-5">
-            <div class="col-0 col-md-4"></div>
-            <div class="col-0 col-md-1"></div>
-            <div class="col-12 col-md-7 p-2 p-md-5 rose1-50 my-5 text-white">
-                <div class="text-center text-md-start m-md-5">
-                    <p>Date</p>
-                    <p>Church</p>
-                    <p>Ceremony starts at ....</p>
-                    <button class="btn bg-white p-2">Location</button>
+    <!-- block 1 -->
+    <div class="d-flex flex-column align-items-lg-center">
+        <div class="container-fluid container-lg justify-content-start position-relative">
+            <div class="row position-absolute in-behind h-100 overflow-hidden start-0">
+                <div class="col-lg-1"></div>
+                <div class="col-12 col-lg-8 blocka-bg">
+                    <img class="img-fluid"
+                        src="https://images.pexels.com/photos/2253870/pexels-photo-2253870.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                        alt="">
+                </div>
+            </div>
+            <div class="row p-2 p-md-5">
+                <div class="col-0 col-md-4"></div>
+                <div class="col-12 col-md-6 p-2 p-md-5 rose1-50 my-5 text-white">
+                    <div class="text-center text-md-start m-md-5">
+                        <p>Time</p>
+                        <p>Reception</p>
+                        <p>Party starts at ....</p>
+                        <button class="btn bg-white p-2">Location</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- block 2 -->
+        <div class="container-fluid container-lg justify-content-end position-relative">
+            <div class="row position-absolute in-behind h-100 overflow-hidden end-0">
+                <div class="col-lg-4"></div>
+                <div class="col-12 col-lg-8">
+                    <img class="img-fluid "
+                        src="https://images.pexels.com/photos/1488315/pexels-photo-1488315.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                        alt="">
+                </div>
+            </div>
+            <div class="row p-2 p-md-5 d-flex align-items-start">
+                <div class="col-2"></div>
+                <div class="col-8 col-md-7 p-2 p-md-5 rose1-50 text-white my-5 ">
+                    <div class="text-center text-md-start m-md-5">
+                        <p>Date</p>
+                        <p>Church</p>
+                        <p>Ceremony starts at ....</p>
+                        <button class="btn bg-white p-2">Location</button>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+
+
 
     
-    <!-- block1 -->
-    <!-- <div class="container-fluid container-md">
-        <div class="container bg-success bg-opacity-10 text-start block-info p-md-5" id="block1">
-            <div class="row align-items-end align-items-md-center h-100">
-                <div class="col-6 mx-auto">
-                </div>
-                <div
-                    class="col-12 col-md-6 p-3 p-md-0 text-center text-md-start mx-auto bg-light bg-opacity-75 d-flex justify-content-center justify-content-md-start">
-                    <div class="blk-content p-2 p-md-5 ">
-                        <p>Date</p>
-                        <p>Church</p>
-                        <p>Ceremony starts at ....</p>
-                        <button class="btn oldrose">Location</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-<div class="container">
-    <p>hello</p>
-</div> -->
-
-
-    <!-- <div class="container ">
-    <div class="container container-md p-md-5 text-center">
-        <h1 class="p-3 mb-5">Lorem ipsum dolor sit amet</h1>
-        <div class="container bg-success bg-opacity-10 text-start block-info" id="block1">
-            <div class="row align-items-end align-items-md-center h-100">
-                <div class="col-6 mx-auto">
-                </div>
-                <div
-                    class="col-12 col-md-6 p-3 p-md-0 text-center text-md-start mx-auto bg-light bg-opacity-75 d-flex justify-content-center justify-content-md-start">
-                    <div class="blk-content p-2 p-md-5 ">
-                        <p>Date</p>
-                        <p>Church</p>
-                        <p>Ceremony starts at ....</p>
-                        <button class="btn bg-oldrose">Location</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div> -->
-
-
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script>
