--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
                 </div>
             </div>
             <div class="row p-2 p-md-5">
-                <div class="col-0 col-md-4"></div>
-                <div class="col-12 col-md-6 p-2 p-md-5 rose1-50 my-5 text-white">
+                <div class="col-2 col-md-4"></div>
+                <div class="col-8 col-md-7 p-2 p-md-5 rose1-50 text-white my-5 ">
                     <div class="text-center text-md-start m-md-5">
                         <p>Time</p>
                         <p>Reception</p>
@@ -117,9 +117,95 @@
         </div>
     </div>
 
+    <!-- carousel -->
+    <br><br>
+    <br><br>
+<div class="container-fluid">
+    <h1 class="position-absolute w-100 d-flex justify-content-center pt-n p-3"> Message From </h1>
+    <div class="position-relative ">
+
+        <div id="Caro" class="carousel slide" data-bs-ride="carousel">
+
+            <div class="carousel-inner">
+                <div class="carousel-item">
+                    <div class="container-fluid position-relative">
+                        <div class="caro_a position-absolute h-100 w-100 bg-cover">
+                        </div>
+                        <div class="bg-cover">
+                            <div class="row py-5">
+                                <div class="col-3"></div>
+                                <div class="col-6 text-center my-5 pt-5">
+
+                                    <p>Christopher Campbel</p>
+                                    <hr>
+                                    <p>As one of the oldest friends of the couple and basically the one who’ve helped
+                                        set up their very
+                                        first date – I am so happy!
+                                    </p>
+                                    
+                                </div>
+                                <div class="col-3"></div>
+                            </div>
+                        </div>
+                    </div>
 
 
-    
+                </div>
+                <div class="carousel-item active ">
+                    <div class="container-fluid position-relative">
+                        <div class="caro_a position-absolute h-100 w-100 bg-cover">
+                        </div>
+                        <div class="bg-cover">
+                            <div class="row py-5">
+                                <div class="col-3"></div>
+                                <div class="col-6 text-center my-5  pt-5">
+
+                                    <p>Christopher Campbel</p>
+                                    <hr>
+                                    <p>As one of the oldest friends of the couple and basically the one who’ve helped
+                                        set up their very
+                                        first date – I am so happy!
+                                    </p>
+                                </div>
+                                <div class="col-3"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="container-fluid position-relative">
+                        <div class="caro_a position-absolute h-100 w-100 bg-cover">
+                        </div>
+                        <div class="bg-cover">
+                            <div class="row py-5">
+                                <div class="col-3"></div>
+                                <div class="col-6 text-center my-5  pt-5">
+
+                                    <p>Christopher Campbel</p>
+                                    <hr>
+                                    <p>As one of the oldest friends of the couple and basically the one who’ve helped
+                                        set up their very
+                                        first date – I am so happy!
+                                    </p>
+                                </div>
+                                <div class="col-3"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#Caro" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#Caro" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+    </div>
+</div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script>
