Alpha_Story_responsive

--- a/index.html
+++ b/index.html
@@ -8,36 +8,41 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet"href="https://fonts.googleapis.com/css?family=Stalemate">
+    <link rel="stylesheet"href="https://fonts.googleapis.com/css?family=Gabriela">
+    <link rel="stylesheet"href="https://fonts.googleapis.com/css?family=Manjari">
+
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <!-- header -->
     <header class="header vh-100 bg-cover">
-        <nav class="row d-flex justify-content-between navbar-expand-lg">
+        <nav class="row navbar-expand-lg">
             <div class="container">
-                <div class="row px-3">
-                    <div class="col-5 col-lg-3 ">
-                        <!-- logo here -->
+                <div class="row justify-content-around align-items-center pt-4">
+                    <div class="col-4 col-md-5 col-md-6">
+                        <img class="img-fluid" src="images/logo.png" alt="Logo" width="200">
                     </div>
-                    <div class="col-6 text-end text-white pt-3 pt-lg-4 gy-5">
-                        <button class="bg-info navbar-toggler btn btn-warning" type="button" data-bs-toggle="collapse"
+                    <div class="col-4 col-md-1 col-lg-0 text-end text-white">
+                        <button class="navbar-toggler btn btn-warning" type="button" data-bs-toggle="collapse"
                             data-bs-target="#navcollapse">
-                            <span class="navbar-toggler-icon">X</span>
+                            <span class="m-2 navbar-toggler-icon"><i class="fs-1 fa fa-bars"></i></span>
                         </button>
-                        <div class="navbar-collapse collapse navbar-expand-lg justify-content-around" id="navcollapse">
-                            <ul class="navbar-nav text-md-end py-5 pe-2">
-                                <li class="nav-item text-nowrap">
-                                    <a class="px-lg-5 nav-link fw-bold" href="">Home</a>
+                        <div class="navbar-collapse collapse navbar-expand-lg justify-content-end" id="navcollapse">
+                            <ul class="navbar-nav py-5 ">
+
+                                <li class="nav-item text-nowrap ">
+                                    <a class="px-lg-5 pb-2 pb-lg-0 pe-1 nav-link fw-bold" href="">Home</a>
                                 </li>
                                 <li class="nav-item text-nowrap">
-                                    <a class="px-lg-5 nav-link fw-bold" href="">Gifts</a>
+                                    <a class="px-lg-5 py-2 py-lg-0 pe-1 nav-link fw-bold" href="">Gifts</a>
                                 </li>
                                 <li class="nav-item text-nowrap">
-                                    <a class="px-lg-5 nav-link fw-bold" href="">Gallery</a>
+                                    <a class="px-lg-5 py-2 py-lg-0 pe-1 nav-link fw-bold" href="">Gallery</a>
                                 </li>
                                 <li class="nav-item text-nowrap">
-                                    <a class="px-lg-5 nav-link fw-bold" href="#">Contact Us</a>
+                                    <a class="px-lg-5 py-2 py-lg-0 pe-1 nav-link fw-bold" href="#">Contact</a>
                                 </li>
                             </ul>
                         </div>
@@ -46,72 +51,120 @@
             </div>
         </nav>
         <!-- header bottom --->
-        <div class="container-fluid px-4 bg-opacity-50 align-items-right align-items-md-center 
-        text-nowrap text-white text-md-center
-        d-flex flex-column flex-lg-row justify-content-center
+        <div class="container-fluid bg-opacity-50 align-items-right align-items-md-center 
+        text-nowrap text-white text-md-end text-lg-center
         head-stickbot head-md-width ahead-md-center mb-5">
-            <div class="col-12 col-lg-2 py-2">
-                <div class="p-2 bd-highlight fw-bold text-end text-md-center">The Bride</div>
-            </div>
-            <div class="col-12 col-lg-2 py-2">
-                <div class="p-2 bd-highlight fw-bold text-end text-md-center">The Couple</div>
-            </div>
-            <div class="col-12 col-lg-2 py-2">
-                <div class="p-2 bd-highlight fw-bold text-end text-md-center">The Groom</div>
+            <div class="row d-flex justify-content-lg-center pe-md-4 pe-lg-0  ">
+                <div class="col-12 col-lg-2 py-2 pe-4 pe-md-1">
+                    <div class=" bd-highlight fw-bold text-end text-lg-center f-Gabriela">The Bride</div>
+                </div>
+                <div class="col-12 col-lg-2 py-2 pe-4 pe-md-1">
+                    <div class=" bd-highlight fw-bold text-end text-lg-center f-Gabriela">The Couple</div>
+                </div>
+                <div class="col-12 col-lg-2 py-2 pe-4 pe-md-1">
+                    <div class=" bd-highlight fw-bold text-end text-lg-center f-Gabriela">The Groom</div>
+                </div>
             </div>
         </div>
     </header>
-    <h1 class="p-3 my-5 text-center">Lorem ipsum dolor sit amet</h1>
-    <br>
-    <br>
-    <!-- block 1 -->
-    <div class="d-flex flex-column align-items-lg-center">
-        <div class="container-fluid container-lg justify-content-start position-relative">
-            <div class="row position-absolute in-behind h-100 overflow-hidden start-0">
-                <div class="col-lg-1"></div>
-                <div class="col-12 col-lg-8 blocka-bg">
-                    <img class="img-fluid"
-                        src="https://images.pexels.com/photos/2253870/pexels-photo-2253870.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
-                        alt="">
+    <div class="cotainer-fluid">
+        <div class="container-fluid text-center py-5">
+        <h1 class="text-center f-Gabriela f-md-7" >You are invited</h1>
+        <h1 class="text-center fs-6 fs-md-4  f-Manjari" >We will be glad to have you with us</h1>
+    </div>
+        <!-- blocks -->
+        <div class="d-flex flex-column align-items-lg-center">
+            <div class="container-fluid container-lg justify-content-start position-relative">
+                <div class="row position-absolute in-behind h-100 overflow-hidden start-0">
+                    <div class="col-12 col-lg-10 blocka-bg">
+                        <img class="img-fluid"
+                            src="https://images.pexels.com/photos/2253870/pexels-photo-2253870.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                            alt="">
+                    </div>
                 </div>
-            </div>
-            <div class="row p-2 p-md-5">
-                <div class="col-2 col-md-4"></div>
-                <div class="col-8 col-md-7 p-2 p-md-5 rose1-50 text-white my-lg-5 ">
-                    <div class="text-center text-md-start  m-md-5">
-                        <p>Time</p>
-                        <p>Reception</p>
-                        <p>Party starts at ....</p>
-                        <button class="btn bg-white p-2">Location</button>
+                <div class="row p-md-5">
+                    <div class="col-4 col-md-6 col-lg-5"></div>
+                    <div class="col-8 col-md-6 col-lg-7 p-md-1 rose1-50 text-white my-lg-5 ">
+                        <div class="text-center text-lg-end m-md-5">
+                            <p class="f-loc-title f-Gabriela">Church</p>
+                            <p class="f-loc-text">Our Lady of the Assumption Quasi-Parish</p>
+                            <p class="f-loc-time">10:00 AM to 12:00 PM</p>
+                            <button class="btn bg-white p-2">Church Location</button>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <!-- block 2 -->
-        <div class="container-fluid container-lg justify-content-end position-relative">
-            <div class="row position-absolute in-behind h-100 overflow-hidden end-0">
-                <div class="col-lg-4"></div>
-                <div class="col-12 col-lg-8">
-                    <img class="img-fluid "
-                        src="https://images.pexels.com/photos/1488315/pexels-photo-1488315.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
-                        alt="">
+            <!-- block 2 -->
+            <div class="container-fluid container-lg justify-content-end position-relative">
+                <div class="row position-absolute in-behind h-100 overflow-hidden end-0">
+                    <div class="col-lg-2"></div>
+                    <div class="col-12 col-lg-10">
+                        <img class="img-fluid "
+                            src="https://images.pexels.com/photos/1488315/pexels-photo-1488315.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                            alt="">
+                    </div>
                 </div>
-            </div>
-            <div class="row p-2 p-md-5 d-flex align-items-start">
-                <div class="col-2"></div>
-                <div class="col-8 col-md-7 p-2 p-md-5 rose1-50 text-white my-lg-5 ">
-                    <div class="text-center text-md-start m-md-5">
-                        <p>Date</p>
-                        <p>Church</p>
-                        <p>Ceremony starts at ....</p>
-                        <button class="btn bg-white p-2">Location</button>
+                <div class="row p-md-5 d-flex align-items-start">
+                    <div class="col-2 col-md-0"></div>
+                    <div class="col-8 col-md-7 p-md-1 rose1-50 text-white my-lg-5">
+                        <div class="text-center text-lg-start m-md-5">
+                            <p class="f-loc-title f-Gabriela">Party Venue</p>
+                            <p class="f-loc-text">D' Veranda - an events place</p>
+                            <p class="f-loc-time">12:00 pM to 2:00 PM</p>
+                            <button class="btn bg-white p-2">Venue Location</button>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <br><br><br><br>
-    <br><br><br><br>
+
+    <div class="container-fluid py-5 mt-7">
+        <div class="row d-flex align-items-center align-content-center">
+            <div class="col-12 col-lg-6">
+                <div class="row">
+                    <div class="col-lg-3"></div>
+                    <div class="col-12 col-lg-6 text-center px-4 py-5 px-lg-0 py-lg-0">
+                        <h1 class="f-Gabriela">The Story of Us</h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce non semper lectus, eu porta
+                            ante. Integer sollicitudin eros in mauris gravida, ut dictum justo commodo. Ut auctor massa
+                            et mauris egestas, sed vestibulum felis varius.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce non semper lectus, eu porta
+                            ante. Integer sollicitudin eros in mauris gravida, ut dictum justo commodo. Ut auctor massa
+                            et mauris egestas, sed vestibulum felis varius.</p>
+                    </div>
+                    <div class="col-lg-3"></div>
+                </div>
+            </div>
+            <div class="col-12 col-lg-6">
+                <div class="container-fluid bg-light d-flex align-items-center position-relative">
+                    <video class="img-fluid" id="Sitevid" onclick="playPause();" src="videos/Sitevid2.mp4"></video>
+                    <img class="img-fluid position-absolute play_btn" id="playbtn" onclick="playPause('Sitevid');"
+                        src="images/play.png" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <!-- carousel -->
     <!-- <div class="container-fluid">
         <h1 class="position-absolute w-100 d-flex justify-content-center pt-n p-3"> Message From </h1>
@@ -644,6 +697,7 @@
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script>
     <script src="js/mainjs.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </body>
 
 </html>
