--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet"href="https://fonts.googleapis.com/css?family=Stalemate">
-    <link rel="stylesheet"href="https://fonts.googleapis.com/css?family=Gabriela">
-    <link rel="stylesheet"href="https://fonts.googleapis.com/css?family=Manjari">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Stalemate">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Gabriela">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Manjari">
 
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -69,9 +69,9 @@
     </header>
     <div class="cotainer-fluid">
         <div class="container-fluid text-center py-5">
-        <h1 class="text-center f-Gabriela f-md-7" >You are invited</h1>
-        <h1 class="text-center fs-6 fs-md-4  f-Manjari" >We will be glad to have you with us</h1>
-    </div>
+            <h1 class="text-center f-Gabriela f-md-7">You are invited</h1>
+            <h1 class="text-center fs-6 fs-md-4  f-Manjari">We will be glad to have you with us</h1>
+        </div>
         <!-- blocks -->
         <div class="d-flex flex-column align-items-lg-center">
             <div class="container-fluid container-lg justify-content-start position-relative">
@@ -119,9 +119,9 @@
         </div>
     </div>
 
-    <div class="container-fluid py-5 mt-7">
-        <div class="row d-flex align-items-center align-content-center">
-            <div class="col-12 col-lg-6">
+    <div class="container-fluid my-5">
+        <div class="row ">
+            <div class="col-12 col-lg-6 d-flex align-items-center justify-content-center">
                 <div class="row">
                     <div class="col-lg-3"></div>
                     <div class="col-12 col-lg-6 text-center px-4 py-5 px-lg-0 py-lg-0">
@@ -137,17 +137,34 @@
                 </div>
             </div>
             <div class="col-12 col-lg-6">
-                <div class="container-fluid bg-light d-flex align-items-center position-relative">
-                    <video class="img-fluid" id="Sitevid" onclick="playPause();" src="videos/Sitevid2.mp4"></video>
-                    <img class="img-fluid position-absolute play_btn" id="playbtn" onclick="playPause('Sitevid');"
-                        src="images/play.png" alt="">
+
+
+
+                <div class="vid_container">
+                    <iframe class="video" src="https://streamable.com/e/qov1mt?nocontrols=1&loop=0&">
+                    </iframe>
                 </div>
             </div>
+
+
+
+            <!-- <video class="img-fluid" id="Sitevid" onclick="playPause();" src="https://player.vimeo.com/video/772962273?h=fb833b0f91&amp;controls=0&amp;background=0&amp;"></video> -->
+
+            <!-- <img class="img-fluid position-absolute play_btn" id="playbtn" onclick="playPause('Sitevid');"
+                        src="images/play.png" alt=""> -->
         </div>
+    </div>
     </div>
 
 
 
+
+    <div>
+
+    </div>
+
+    <!-- 
+    https://i.vimeocdn.com/video/1551167458-745107345c8545ab9e92e40f1691af89e646a87870da146977c24cad8695cefa-d_640x360 -->
 
 
 
@@ -698,6 +715,8 @@
         crossorigin="anonymous"></script>
     <script src="js/mainjs.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://player.vimeo.com/api/player.js"></script>
+
 </body>
 
 </html>
